@startuml

abstract class Module

class DispatchCache {
  likelihood : Dict[Module, np.ndarray]
  scope : Dict[Module, np.ndarray]
  sample : Dict[Module, np.ndarray]
}

class DispatchContext {
  cache : DispatchCache
  args : Dict[Module, np.ndarray]
}

Module -- DispatchCache : key
DispatchCache <-- DispatchContext
Module -- DispatchContext : key

@enduml